[package]
name = "snap2daph"
version = "0.1.0"
edition = "2021"
authors = ["Stratos Psomadakis <s.psomadakis@gmail.com>"]
description = """
snap2daph -- A SNAP-to-Daphne dataset converter
"""
documentation = "https://github.com/psomas/snap2daph"
homepage = "https://github.com/psomas/snap2daph"
repository = "https://github.com/psomas/snap2daph"
license = "GPLv2"

[dependencies]
clap = { version = "4.5.7", features = ["cargo", "derive", "env", "string", "unicode", "wrap_help"] }
clap_derive = "4.5.5"
itertools = "0.13.0"
serde = { version = "1.0.203", features = ["alloc", "derive", "rc", "serde_derive"] }
serde_json = "1.0.118"
strum = { version = "0.26.3", features = ["derive", "strum_macros"] }
strum_macros = "0.26.4"
zerocopy = { version = "0.7.34", features = ["alloc", "derive", "simd", "zerocopy-derive"] }
